# coyote-socket

./: .gitignore  CLAUDE.md  README.md  RESUME.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/skills/dev-server/: CLAUDE.md  SKILL.md  cli.mjs
.claude/skills/tauri-v2/: SKILL.md
.github/workflows/: release.yml
docs/architecture/: processing-pipeline.md
docs/coyote/: README_V2_EN.md  README_V3_EN.md
docs/plans/: buttplug-integration.md  lr-integration.md  other.md
public/: splashscreen.html
scripts/: analyze-diagnostic.js  build.js  release.js
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dev-server.json
src-tauri/icons/: icon.icns
src-tauri/src/: bluetooth.rs  device.rs  diagnostic.rs  gamepad.rs  logging.rs  main.rs  modulation.rs  processing.rs  protocol.rs  settings.rs  waveform.rs  websocket.rs
src-tauri/src/buttplug/: handler.rs  messages.rs  mod.rs  pipeline.rs  state.rs  types.rs
src-tauri/src/lovense/: handler.rs  messages.rs  mod.rs
src/lib/components/: BluetoothPanel.svelte  ChannelControl.svelte  ConnectionPanel.svelte  GamepadStatusPill.svelte  InputMonitor.svelte  InputStatusPill.svelte  LogsPanel.svelte  OutputStatusPill.svelte  RangeSlider.svelte  SynthWaveformChart.svelte  WaveformChart.svelte
src/lib/services/: CoyoteService.ts
src/lib/stores/: buttplugSettings.ts  channels.ts  connection.ts  gamepadStatus.ts  generalSettings.ts  inputPosition.ts  inputSource.ts  presetSelection.ts  stateSync.ts  (+1 more)
(+30 files in other folders)
